Switch from Authelia to Traefik basic authentication
- Remove Authelia and Redis services
- Configure basic authentication with htpasswd
- Update port mapping to avoid conflict with host nginx (80 -> 8080)
- Add credentials: wangtae@gmail.com / !wangtae@gmail.com@.
- Update documentation and backup previous configurations

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,11 @@ config/certs/
 
 # Backup files created by Makefile
 backups/
+
+# Authelia data
+authelia/redis-data/
+authelia/secrets/
+authelia/users_database.yml
+
+# htpasswd files (contains credentials)
+traefik/auth/
