Clean up project after switching to basic auth
- Remove Authelia containers and related files
- Update docker-compose.yml to remove deprecated version field
- Update README.md with correct port (8080) and authentication info
- Update .env.example to reflect new structure
- Remove unused authelia.yml from dynamic config

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # ========================================
 
 # 기본 도메인 (local 개발 환경)
-BASE_DOMAIN=local
+DOMAIN=local
 
 # Let's Encrypt 이메일 (실제 도메인 사용 시 필수)
 ACME_EMAIL=admin@example.com
@@ -13,10 +13,8 @@ ACME_EMAIL=admin@example.com
 # 운영: https://acme-v02.api.letsencrypt.org/directory
 ACME_CA_SERVER=https://acme-staging-v02.api.letsencrypt.org/directory
 
-# 대시보드 인증 (htpasswd 형식)
-# 생성 방법: echo $(htpasswd -nb admin password) | sed -e s/\\$/\\$\\$/g
-# 기본값: admin / traefik
-DASHBOARD_AUTH=admin:$$2y$$10$$hBbJMmX.CUYVr0uTvJG.2.Cj0N7FR7bXdPOZ7r1UE/reY7Y3COGhG
+# 대시보드 인증은 traefik/dynamic/basicauth.yml에서 설정됩니다
+# 기본값: wangtae@gmail.com / !wangtae@gmail.com@.
 
 # 로그 레벨 (ERROR, WARN, INFO, DEBUG)
 LOG_LEVEL=INFO
